--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,188 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: mediumCustom;
+  src: url(../../public/iranyekan/allwoff/IRANSansX-Medium.woff),
+    url(../../public/iranyekan/allwoff/IRANSansX-Medium.woff2);
+}
+@font-face {
+  font-family: lightCustom;
+  src: url(../../public/iranyekan/allwoff/IRANSansX-Regular.woff),
+    url(../../public/iranyekan/allwoff/IRANSansX-Regular.woff2);
+}
+@font-face {
+  font-family: boldCustom;
+  src: url(../../public/iranyekan/allwoff/IRANSansX-Bold.woff),
+    url(../../public/iranyekan/allwoff/IRANSansX-Bold.woff2);
+}
+@font-face {
+  font-family: numberCustom;
+  src: url(../../public/iranyekan/allwoff/IRANSansWeb-FaNum.woff),
+    url(../../public/iranyekan/allwoff/IRANSansWeb-FaNum.woff2);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+  --Bgcolor: #f2f2f2;
+  --NavBgcolor: #f6f6f6;
+  --PrimaryGreen: #438e44;
+  --SecondaryGreen: #79b59c;
+  --Red: #d01110;
+  --Secondary: #ececec;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--Bgcolor);
+  font-family: mediumCustom;
+  overflow-x: hidden;
+  user-select: none;
+}
+
+.lightFont {
+  font-family: lightCustom;
+}
+
+.boldFont {
+  font-family: boldCustom;
+}
+
+.SliderRange {
+  width: 100%;
+  height: 5px;
+  border-radius: 100px;
+  background-color: var(--Secondary);
+  margin-top: 1.5rem;
+}
+
+.SliderRange .example-thumb {
+  width: 4px;
+  cursor: pointer;
+  outline: none;
+  height: 20px;
+  /* border-radius: 50%; */
+  top: -7px;
+  background-color: var(--Red);
+}
+
+.SliderRange .example-track {
+  /* top: 20px; */
+  height: 5px;
+  border-radius: 100px;
+}
+
+.SliderRange .example-track-0 {
+  background-color: var(--Secondary);
+}
+
+.SliderRange .example-track-1 {
+  background-color: var(--Red);
+}
+
+.numberFont {
+  font-family: numberCustom;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: rgb(0, 0, 0) !important;
+}
+
+.TabBtn {
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.TabBtn::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: var(--Red);
+  bottom: -2px;
+  left: 0;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.TabBtn:hover::before {
+  transform-origin: right;
+  transform: scaleX(1);
+}
+
+.TabActive.TabBtn::before {
+  transform: scaleX(1);
+}
+
+
+.gallerySlider .swiper-slide-thumb-active {
+  opacity: .5;
+}
+
+.MainNavbar {
+  background-color: var(--NavBgcolor);
+  @apply p-4 z-20 w-full bg-transparent  text-[#363636];
+}
+
+.LinkHoverEffect {
+  @apply hover:text-Red transition-all;
+}
+
+.DropdownContentLinks {
+  @apply hover:bg-red-400 hover:text-white   transition-all duration-200 py-1 pb-2 px-2  rounded-full;
+}
+
+.Mn-active {
+  @apply bg-[#F79C9C] text-red-700;
+}
+
+.Mn-active-icon {
+  @apply rotate-90 text-white border-dashed;
+}
+
+.Mn-active-list {
+  @apply h-[200px] visible;
+}
+
+.NavLinkActive {
+  @apply text-Red;
+}
+
+.SliderNext,
+.SliderPrev {
+  @apply bg-gray-500 p-2 px-4 rounded-md text-sm;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #545454;
+  background: rgb(118, 118, 118);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--Red);
+  border-radius: 2rem;
+}
+
+.SidebarUl::-webkit-scrollbar {
+  width: 4px;
+}
+
+.SidebarUl::-webkit-scrollbar-thumb {
+  border-radius: 2rem;
+}
+
+@media (max-width: 640px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none !important;
+  }
 }
